--- a/index.html
+++ b/index.html
@@ -3495,7 +3495,7 @@
 
             <address class="content">
               419 State 414 Rte
-              Beaver Dams, New York(NY), 14812, USA
+              Eastleigh, Nairobi (NY), 140, Kenya.
             </address>
           </li>
 
@@ -3512,7 +3512,7 @@
               <ion-icon name="mail-outline"></ion-icon>
             </div>
 
-            <a href="mailto:mc-256@gmail.com" class="footer-nav-link">example@gmail.com</a>
+            <a href="mailto:mc-256@gmail.com" class="footer-nav-link">mc-256@gmail.com</a>
           </li>
 
         </ul>
